--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Welcome to Git</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nisi, et voluptatibus nobis autem earum porro illo provident culpa quaerat vero dignissimos sit aliquam minima ab! Incidunt quam eveniet esse!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nisi, et voluptatibus nobis autem earum porro illo provident culpa quaerat vero dignissimos sit aliquam minima ab! Incidunt quam eveniet esse!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nisi, et voluptatibus nobis autem earum porro illo provident culpa quaerat vero dignissimos sit aliquam minima ab! Incidunt quam eveniet esse!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nisi, et voluptatibus nobis autem earum porro illo provident culpa quaerat vero dignissimos sit aliquam minima ab! Incidunt quam eveniet esse!</p>
     
 </body>
 </html>
